--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -21,8 +21,8 @@
                                     <label for="exampleInputAmount" class="sr-only">New Qty</label>
                                     <div class="input-group">
                                         <div class="input-group-addon">Qty</div>
-                                        <input name="quanity" type="number" min="0" max="999" class="form-control">
-                                        <div class="inout-group-addon">{{ item.quanity }}</div>
+                                        <input name="quantity" type="number" min="0" max="999" class="form-control">
+                                        <div class="inout-group-addon">{{ item.quantity }}</div>
                                     </div>
                             </div>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true">Amend</span></button>
@@ -36,7 +36,7 @@
 <div class="row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="/" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
 {% endblock %}
