changed int to float to correct bug

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -11,7 +11,7 @@
                     
                 <div class="caption">
                     <h3>{{ item.product.name }}</h3>
-                    <p class="product-description">{{ itme.product.description }}</p>
+                    <p class="product-description">{{ item.product.description }}</p>
                     <p>{{ item.product.price }}</p>
                     <p>
                     
@@ -22,7 +22,7 @@
                                     <div class="input-group">
                                         <div class="input-group-addon">Qty</div>
                                         <input name="quantity" type="number" min="0" max="999" class="form-control">
-                                        <div class="inout-group-addon">{{ item.quantity }}</div>
+                                        <div class="input-group-addon">{{ item.quantity }}</div>
                                     </div>
                             </div>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true">Amend</span></button>
